# quoridor_web

./: .gitignore  Cargo.toml  make_lobby.sh  qweb.code-workspace  start.sh
client/: Cargo.toml  index.html  index.js
client/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
static/: game.html  index.html
