[package]
name = "server"
version = "0.1.0"
authors = ["TheRawMeatball <therawmeatball@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version="0.2.5", features=["websocket"] }
tokio = { version = "0.2", features = ["macros"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
pretty_env_logger = "0.4"

quoridor_core = { git = "https://github.com/TheRawMeatball/quoridor.git" }
tbmp = { git = "https://github.com/TheRawMeatball/tbmp.git" }
bimap = { version = "0.5.2" }

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
crossbeam-channel = "0.4.4"